# hb

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: conftest.py
src/hb/: __init__.py  _path.py  _read.py  _rule.py  cli.py
src/hb/path/: __init__.py  _path.py  path.py
src/hb/path/_tests/: test_path.py
src/hb/read/: __init__.py  _read.py
src/hb/rules/: _gcc.py
src/path/: path.py
src/path/_tests/: test_path.py
src/path/_tests/files/subdir/: foo.bar  test2.list
src/path/_tests/files/subdir2/bar/: files.list
tests/: .gitignore  build.ninja.exp  build2.ninja.exp  test_path.py  test_read.py  test_rule.py
tests/files/: dirsymlink  hb.py  slink  test1.list  test2.list
tests/files/subdir/: hb.py
tests/files/subdir2/bar/: hb.py
tests/files/subdir2/foo/: foo.list  hb.py
