[project]
name = "hb"
version = "0.0.1"
authors = [
    { name="Stefan Sandström", email="telemarkguru@gmail.com" },
]
description = "Hierarchical build system"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=2.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
]
requires = ["ninja", "click"]

[project.urls]
"Homepage" = "https://github.com/telemarkguru/hb"
"Bug Tracker" = "https://github.com/telemarkguru/hb/issues"

[project.scripts]
hb = "hb.cli:main"
explist = "hb.cli:explist"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[options.extra_require]
testing = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov-report=term-missing",
    "--cov"
]
testpaths = [
    "src",
    "tests",
]

[tool.coverage.run]
source = ["src", "tests"]

[metadata]
name = "hb"

[tool.black]
line-length = 79
include = [
    "src",
    "tests",
]
