[project]
name = "hb"
version = "0.0.1"
authors = [
    { name="Stefan Sandström", email="telemarkguru@gmail.com" },
]
description = "Hierarchical build system"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=2.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
]
requires = ["ninja", "click"]

[project.urls]
"Homepage" = "https://github.com/telemarkguru/hb"
"Bug Tracker" = "https://github.com/telemarkguru/hb/issues"

[project.scripts]
hb = "hb.cli:main"
explist = "hb.cli:explist"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[options.extra_require]
testing = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov-report=term-missing",
    "--cov"
]
testpaths = [
    "src",
    "tests",
]

[tool.coverage.run]
source = ["src", "tests"]

[metadata]
name = "hb"

[tool.black]
line-length = 79
include = [
    "src",
    "tests",
]

[tool.poetry]
name = "hb"
version = "0.1.0"
description = "Hierarchical build system"
authors = ["Stefan Sandstrom <telemarkguru@gmail.com>"]
license = "Apache Software License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ninja = "^1.11.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^23.1.0"
pylama = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
